--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://root:root@localhost:5432/bifam-site"
+DATABASE_URL="postgresql://root:root@localhost:5432/penses-betes"
 
 LOCAL_FRONT_URL="http://localhost:3000"
 
